Update Open Graph and Twitter URLs in index.html

--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <meta name="description" content="Money comes, money goes. How does your money move? Visualize your cash flow with a simple diagram that's easy to make and private." />
     <meta property="og:description" content="Money comes, money goes. How does your money move? Visualize your cash flow with a simple diagram that's easy to make and private.">
     <meta property="og:title" content="Cashkey">
-    <meta property="og:url" content="https://cashkey.ginatrapani.org">
+    <meta property="og:url" content="https://cashkey.cored.al">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Cashkey">
     <meta property="og:locale" content="en_US">
     <meta property="og:locale:alternate" content="en_US">
     <meta property="twitter:title" content="Cashkey">
     <meta property="twitter:description" content="Money comes, money goes. How does your money move? Visualize your cash flow with a simple diagram that's easy to make and private.">
-    <meta property="twitter:url" content="https://cashkey.ginatrapani.org">
+    <meta property="twitter:url" content="https://cashkey.cored.al">
 
     <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
@@ -22,7 +22,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <meta name="apple-mobile-web-app-title" content="Cashkey" />
     <link rel="manifest" href="/site.webmanifest" />
-    <script src="https://beamanalytics.b-cdn.net/beam.min.js" data-token="ae2c9104-5f5b-41bf-95c6-e79cdf10801d" async ></script>
+    <script src="https://beamanalytics.b-cdn.net/beam.min.js" data-token="379f5130-d950-4638-bdb4-22f860ae879a" async ></script>
   </head>
 
   <body>
